<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Downloader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="activity_downloadtest_label_download">点击下载</string>
    <string name="activity_downloadtest_label_upload">点击上传</string>
    <string name="activity_downloadtest_label_default">LOG</string>
    <string name="activity_downloadtest_label_filelist">文件列表</string>
    <string name="activity_downloadtest_label_location">打开百度地图</string>
    <string name="activity_location_label_search">search</string>
    <string name="activity_location_label_display">显示</string>
    <string name="activity_location_label_nearby">附近</string>
    <string name="activity_location_label_navigation">导航</string>
    <string name="activity_location_label_spatial">量算</string>
    
</resources>
