<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        
    <Button
        android:id="@+id/activity_downloadtest_action_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_downloadtest_label_download" />
    
    <Button
        android:id="@+id/activity_downloadtest_action_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_downloadtest_label_upload" />
    
    <Button
        android:id="@+id/activity_downloadtest_action_filelist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_downloadtest_label_filelist" />
    <Button
        android:id="@+id/activity_downloadtest_action_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_downloadtest_label_location" />

    <EditText
        android:id="@+id/activity_downloadtest_input_file_log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:inputType="textMultiLine" 
        android:text="@string/activity_downloadtest_label_default">
    </EditText>

</LinearLayout>
